# yt-dl

./: .gitignore  README.md  main.py  pyproject.toml
document/: 00_專案總覽.md  01_main_py.md  02_index_js.md  03_websocket_js.md  04_index_html.md  05_pyproject_toml.md  06_index_css.md  07_TODO1_智慧推薦清單.md  08_TODO2_自動標籤分類器.md
static/css/: index.css
static/js/: index.js  websocket.js
templates/: index.html
